# memory-core-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
baselines/: bm25_2026-04-19_19-05-26_n100.json  bm25_2026-04-19_19-46-05_n500.json  dense_2026-04-19_19-06-54_n100.json  dense_2026-04-19_20-13-52_n500.json  hybrid-rrf_2026-04-19_19-09-29_n100.json  hybrid-rrf_2026-04-19_20-41-49_n500.json  hybrid-rrf_2026-04-24_16-45-40_n100.json  memory-core_2026-04-19_19-25-12_n100.json  memory-core_2026-04-19_21-01-29_n30.json  memory-core_2026-04-19_22-20-05_n30.json  memory-core_2026-04-24_15-32-39_n100.json  memory-core_2026-04-25_16-15-51_n100.json  memory-core_2026-04-26_14-04-19_n100.json  memory-core_2026-04-26_14-10-48_n100.json  memory-core_2026-04-26_14-22-14_n100.json  memory-core_2026-04-26_14-24-49_n100.json  memory-core_2026-04-27_10-26-51_n100.json  memory-core_2026-04-27_10-53-34_n500.json  memory-core_2026-04-27_11-06-32_n500.json  memory-core_2026-04-27_13-47-09_n100.json  memory-core_2026-04-27_13-54-48_n100.json  memory-core_2026-04-27_14-09-46_n100.json  memory-core_2026-04-27_15-05-28_n500.json  memory-core_2026-04-27_15-14-51_n500.json
docs/: EVALUATION_REPORT.md
mceval/: __init__.py  cli.py
mceval/adapters/: __init__.py  base.py  bm25_baseline.py  dense_baseline.py  hindsight.py  hybrid_rrf_baseline.py  memory_core.py  mflow.py
mceval/datasets/: locomo.py  longmemeval.py
mceval/diagnose/: ab.py
mceval/eval/: metrics.py  runner.py  (+2 more)
reports/: baselines_initial.md  baselines_longmemeval_s.md
tests/: test_adapter_contract.py  test_sampling.py
